--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,248 +1,227 @@
 {{ define "base" }}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://unpkg.com/notie/dist/notie.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css"
-    />
 
-    {{ block "css" . }}
-    {{
-      end
-    }}
-    <style>
-      .my-footer {
-        background-color: #e3f2fd;
-        width: 100%;
-        height: 50px;
-        padding: 10px;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" />
 
-      p {
-        text-align: justify;
-      }
+  {{ block "css" . }}
+  {{
+  end
+  }}
+  <style>
+    .my-footer {
+      background-color: #e3f2fd;
+      width: 100%;
+      height: 50px;
+      padding: 10px;
+    }
 
-      .notie-container {
-        box-shadow: none;
-      }
-    </style>
-  </head>
+    p {
+      text-align: justify;
+    }
 
-  <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/about"
-                >About</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="/generals-quarters"
-                    >General's Quarters</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/majors-suite"
-                    >Major's Suite</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/search-availability">Book Now</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+    .notie-container {
+      box-shadow: none;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/about">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="/generals-quarters">General's Quarters</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="/majors-suite">Major's Suite</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search-availability">Book Now</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form>
       </div>
-    </nav>
-    {{ block "content" . }}
-
-    {{ end }}
-    <div class="row my-footer">
-      <div class="col">left</div>
-      <div class="col">middle</div>
-      <div class="col">right</div>
     </div>
-  </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
-  <script src="https://unpkg.com/notie"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
-  <script>
-    let attention = Prompt();
-    function notify(msg, msgType) {
-      notie.alert({
-        type: msgType,
-        text: msg,
-      });
-    }
-    function notifyModal(title, text, icon, confirmationButtonText) {
-      Swal.fire({
-        title: title,
-        text: text,
+  </nav>
+  {{ block "content" . }}
+
+  {{ end }}
+  <div class="row my-footer">
+    <div class="col">left</div>
+    <div class="col">middle</div>
+    <div class="col">right</div>
+  </div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+<script src="https://unpkg.com/notie"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
+<script>
+  let attention = Prompt();
+  function notify(msg, msgType) {
+    notie.alert({
+      type: msgType,
+      text: msg,
+    });
+  }
+
+  function notifyModal(title, text, icon, confirmationButtonText) {
+    Swal.fire({
+      title: title,
+      text: text,
+      icon: icon,
+      confirmButtonText: confirmationButtonText,
+    });
+  }
+
+  function Prompt() {
+    let toast = function (c) {
+      const { msg = "", icon = "success", position = "top-end" } = c;
+
+      const Toast = Swal.mixin({
+        toast: true,
+        title: msg,
+        position: position,
         icon: icon,
-        confirmButtonText: confirmationButtonText,
+        showConfirmButton: false,
+        timer: 3000,
+        timerProgressBar: true,
+        didOpen: (toast) => {
+          toast.addEventListener("mouseenter", Swal.stopTimer);
+          toast.addEventListener("mouseleave", Swal.resumeTimer);
+        },
       });
-    }
-    function Prompt() {
-      let toast = function (c) {
-        const { msg = "", icon = "success", position = "top-end" } = c;
 
-        const Toast = Swal.mixin({
-          toast: true,
-          title: msg,
-          position: position,
-          icon: icon,
-          showConfirmButton: false,
-          timer: 3000,
-          timerProgressBar: true,
-          didOpen: (toast) => {
-            toast.addEventListener("mouseenter", Swal.stopTimer);
-            toast.addEventListener("mouseleave", Swal.resumeTimer);
-          },
-        });
+      Toast.fire({});
+    };
 
-        Toast.fire({});
-      };
+    let success = function (c) {
+      const { msg = "", title = "", footer = "" } = c;
 
-      let success = function (c) {
-        const { msg = "", title = "", footer = "" } = c;
+      Swal.fire({
+        icon: "success",
+        title: title,
+        text: msg,
+        footer: footer,
+      });
+    };
 
-        Swal.fire({
-          icon: "success",
-          title: title,
-          text: msg,
-          footer: footer,
-        });
-      };
+    let error = function (c) {
+      const { msg = "", title = "", footer = "" } = c;
 
-      let error = function (c) {
-        const { msg = "", title = "", footer = "" } = c;
+      Swal.fire({
+        icon: "error",
+        title: title,
+        text: msg,
+        footer: footer,
+      });
+    };
 
-        Swal.fire({
-          icon: "error",
-          title: title,
-          text: msg,
-          footer: footer,
-        });
-      };
+    async function custom(c) {
+      const { msg = "", title = "" } = c;
 
-      async function custom(c) {
-        const { msg = "", title = "" } = c;
-
-        const { value: result } = await Swal.fire({
-          title: title,
-          html: msg,
-          backdrop: false,
-          focusConfirm: false,
-          showCancelButton: true,
-          willOpen: () => {
-            if (c.willOpen !== undefined) {
-              c.willOpen();
-            }
-          },
-          didOpen: () => {
-            if (c.didOpen !== undefined) {
-              c.didOpen();
-            }
-          },
-          preConfirm: () => {
-            if (c.preConfirm !== undefined) {
-              c.preConfirm();
-            }
-          },
-        });
-        if (result) {
-          if (result.dismiss !== Swal.DismissReason.cancel) {
-            if (result.value !== "") {
-              if (c.callback !== undefined) {
-                c.callback(result);
-              }
-            } else {
-              c.callback(false);
+      const { value: result } = await Swal.fire({
+        title: title,
+        html: msg,
+        backdrop: false,
+        focusConfirm: false,
+        showCancelButton: true,
+        willOpen: () => {
+          if (c.willOpen !== undefined) {
+            c.willOpen();
+          }
+        },
+        didOpen: () => {
+          if (c.didOpen !== undefined) {
+            c.didOpen();
+          }
+        },
+        preConfirm: () => {
+          if (c.preConfirm !== undefined) {
+            c.preConfirm();
+          }
+        },
+      });
+      if (result) {
+        if (result.dismiss !== Swal.DismissReason.cancel) {
+          if (result.value !== "") {
+            if (c.callback !== undefined) {
+              c.callback(result);
             }
           } else {
             c.callback(false);
           }
+        } else {
+          c.callback(false);
         }
       }
-
-      return {
-        toast: toast,
-        success: success,
-        error: error,
-        custom: custom,
-      };
     }
-  </script>
-  {{ block "js" . }}
-  {{
-    end
-  }}
+
+    return {
+      toast: toast,
+      success: success,
+      error: error,
+      custom: custom,
+    };
+  }
+</script>
+{{ with .Error }}
+<script>
+  notify({{.}}, "error");
+</script>
+{{ end }}
+{{ with .Flash }}
+<script>
+  notify({{.}}, "success");
+</script>
+{{ end }}
+{{ with .Warning }}
+<script>
+  notify({{.}}, "warning");
+</script>
+{{ end }}
+{{ block "js" . }}
+{{
+end
+}}
+
 </html>
 {{ end }}
